# discrete-symbolic-estimation

./: .gitignore  ARTIFACT.md  CHANGELOG.md  CITATION.cff  Dockerfile  EXPERIMENTS.md  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: algorithm.md  api-reference.md  architecture.md  cli-reference.md  evaluation.md  hypothesis-integration.md  limitations.md  related-work.md  sota-comparison.md  tutorial.md
experiments/: EXPERIMENTAL_STUDY.md  fetch_svcomp.py  plot_results.py  run_convergence_curve.py  run_decision_curve.py  run_full_study.py  run_rare_event_scaling.py
experiments/results/: convergence.json  convergence.jsonl  decision.json  decision.jsonl  rare_event.json  rare_event.jsonl  runs.jsonl  summary.json
paper/: .gitignore  README.md  dise_submission.tex  dise_unified.tex  main.tex  references.bib
paper/sections/: 00-abstract.tex  01-introduction.tex  02-problem-statement.tex  03-related-work.tex  04-algorithm.tex  05-implementation.tex  06-results.tex  07-conclusion.tex
scripts/: reproduce.sh  sota_3way.py  sota_ab.py  sota_compare.py  sota_report.py
src/dise/: __init__.py  cli.py  plot.py
src/dise/baselines/: __init__.py  sota.py  tier2.py
tests/: test_anytime_bound.py  test_baselines.py  test_betting.py  test_cache.py  test_cli.py  test_coin_machine.py  test_concolic.py  test_distributions.py  test_estimator.py  test_experiment.py  test_frontier.py  test_hypothesis_integration.py  test_invariants_hypothesis.py  test_optional_budget.py  test_regions.py  test_sampler.py  test_scheduler.py  test_smt.py
(+33 files in other folders)
